update theme and complete login page translations

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@babel/runtime": "^7.20.7",
     "@ckeditor/ckeditor5-build-classic": "^35.4.0",
     "@ckeditor/ckeditor5-react": "^5.0.5",
-    "@reduxjs/toolkit": "^1.9.1",
+    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
@@ -36,8 +36,9 @@
     "firebase": "^9.15.0",
     "formik": "^2.2.9",
     "google-maps-react": "^2.0.6",
-    "i18next": "^22.4.6",
-    "i18next-browser-languagedetector": "^7.0.1",
+    "i18next": "^23.2.8",
+    "i18next-browser-languagedetector": "^7.1.0",
+    "i18next-http-backend": "^2.2.1",
     "leaflet": "^1.9.3",
     "lodash": "^4.17.21",
     "lodash.clonedeep": "^4.5.0",
@@ -63,7 +64,7 @@
     "react-facebook-login": "^4.1.1",
     "react-flatpickr": "^3.10.13",
     "react-google-login": "^5.2.2",
-    "react-i18next": "^12.1.1",
+    "react-i18next": "^13.0.1",
     "react-image-lightbox": "^5.1.4",
     "react-input-mask": "^2.0.4",
     "react-jvectormap": "^0.0.16",
@@ -108,14 +109,15 @@
     "@fullcalendar/react": "^5.11.2",
     "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
-    "@vitejs/plugin-react": "^2.1.0",
+    "@vitejs/plugin-react": "^4.0.2",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.2.5",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "prettier": "^3.0.0",
     "sass": "^1.54.9",
-    "vite": "^3.1.1"
+    "vite": "^4.4.2"
   },
   "browserslist": {
     "production": [
