add default auth layout

--- a/.env
+++ b/.env
@@ -6,15 +6,5 @@ VITE_API_AUTH_SRV_URL="http://localhost:6015"
 VITE_API_ACCOUNT_SRV_URL="http://localhost:6014"
 VITE_API_ADMIN_SRV_URL="http://localhost:6020"
 
-VITE_APP_APIKEY=
-VITE_APP_AUTHDOMAIN=
-VITE_APP_DATABASEURL=
-VITE_APP_PROJECTID=
-VITE_APP_STORAGEBUCKET=
-VITE_APP_MESSAGINGSENDERID=
-VITE_APP_APPID=
-VITE_APP_MEASUREMENTID=
-VITE_APP_GOOGLE_API_KEY=
-VITE_APP_GOOGLE_CLIENT_ID=
-VITE_APP_GOOGLE_SECRET_KEY=
-VITE_APP_FACEBOOK_APP_ID=
+VITE_AUTH_SITE_TR_HOST="http://localhost:5015"
+VITE_AUTH_SITE_EN_HOST="http://localhost:5015"
