--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@ VITE_TURNSTILE_SITE_KEY="0x4AAAAAAAFlu3DcJuz0jeMK"
 VITE_API_AUTH_SRV_URL="http://localhost:6015"
 VITE_API_ACCOUNT_SRV_URL="http://localhost:6014"
 VITE_API_ADMIN_SRV_URL="http://localhost:6020"
+VITE_API_PLACE_SRV_URL="http://localhost:6019"
 
 VITE_AUTH_SITE_TR_HOST="http://localhost:5015"
 VITE_AUTH_SITE_EN_HOST="http://localhost:5015"
