--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,8 @@
 {
   "rules": {
     "no-undef": "off",
-    "react/prop-types": "off"
+    "react/prop-types": "off",
+    "react/react-in-jsx-scope": "off"
   },
   "extends": ["eslint:recommended", "plugin:react/recommended"],
   "parserOptions": {
