--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "axios-mock-adapter": "^1.21.2",
     "babel-eslint": "^10.1.0",
     "bootstrap": "^5.2.0",
+    "boxicons": "^2.1.4",
     "chart.js": "^4.1.1",
     "chartist": "^0.11.4",
     "classnames": "^2.3.2",
