--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "boxicons": "^2.1.4",
     "chart.js": "^4.1.1",
     "chartist": "^0.11.4",
+    "ckeditor": "file:./ckeditor",
     "classnames": "^2.3.2",
     "dayjs": "^1.11.9",
     "draft-js": "^0.11.7",
