--- a/.env
+++ b/.env
@@ -6,6 +6,7 @@ VITE_API_AUTH_SRV_URL="http://localhost:6015"
 VITE_API_ACCOUNT_SRV_URL="http://localhost:6014"
 VITE_API_ADMIN_SRV_URL="http://localhost:6020"
 VITE_API_PLACE_SRV_URL="http://localhost:6019"
+VITE_API_UPLOAD_SRV_URL="http://localhost:6018"
 
 VITE_AUTH_SITE_TR_HOST="http://localhost:5015"
 VITE_AUTH_SITE_EN_HOST="http://localhost:5015"
