feature: complete image order actions

--- a/package.json
+++ b/package.json
@@ -63,7 +63,6 @@
     "react-dom": "^18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
     "react-drag-listview": "^0.2.1",
-    "react-drag-reorder": "^1.2.0",
     "react-dropzone": "^14.2.3",
     "react-dual-listbox": "^4.0.0",
     "react-facebook-login": "^4.1.1",
@@ -99,6 +98,7 @@
     "redux": "^4.2.0",
     "redux-form": "^8.3.9",
     "redux-saga": "^1.2.2",
+    "s-dnm": "^0.0.4",
     "simplebar-react": "^2.4.3",
     "sspin": "^1.0.8",
     "styled-components": "^5.3.6",
