--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@ VITE_API_UPLOAD_SRV_URL=
 VITE_API_PLACE_SRV_URL=
 VITE_API_BUSINESS_SRV_URL=
 VITE_API_CATEGORY_SRV_URL=
+VITE_API_SUPPORT_SRV_URL=
 
 VITE_AUTH_SITE_TR_HOST=
 VITE_AUTH_SITE_EN_HOST=
