feature/listing-module: complete the base section

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,6 @@ VITE_API_SUPPORT_SRV_URL=
 
 VITE_AUTH_SITE_TR_HOST=
 VITE_AUTH_SITE_EN_HOST=
+
+VITE_LISTING_SITE_TR_HOST=
+VITE_LISTING_SITE_EN_HOST=
