feature/listing-module: complete the map section

--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "react-image-lightbox": "^5.1.4",
     "react-input-mask": "^2.0.4",
     "react-jvectormap": "^0.0.16",
-    "react-leaflet": "^2.7.0",
+    "react-leaflet": "4",
     "react-modal-video": "^2.0.0",
     "react-native-inline-datepicker": "^1.2.0",
     "react-perfect-scrollbar": "^1.5.8",
